k8s/k8s-dashboard/stage-1/set-args.yml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: kubernetes-dashboard
spec:
  selector:
    matchLabels:
      #TODO: is this the right selector?
      app: kubernetes-dashboard
  template:
    spec:
      containers:
        - name: kubernetes-dashboard
          args:
            - --auto-generate-certificates
            # - --tls-cert-file=/tls.crt
            # - --tls-key-file=/tls.key
            - --namespace=kube-system
